[package]
name = "parse-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "parse_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.5"
pyo3 = { version = "0.18.1"}
rayon = "1.6.1"
rustpython-parser = "0.2.0"
thiserror = "1"
yansi = "0.5.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
